# rigol-dashboard

./: README.md  pyproject.toml
rigol_dashboard/: capture_rigol.py  upd.py
tests/: test_graph.py  test_parsing.py
